--- a/components/Layout/Navbar/Navbar.module.css
+++ b/components/Layout/Navbar/Navbar.module.css
@@ -45,6 +45,13 @@
   justify-content: space-between;
   margin: 20px;
 }
+.notificationUser {
+  margin: 0 0 5px 5px;
+  margin-top: 0 !important;
+  color: #707070;
+  cursor: pointer;
+}
+
 .user {
   margin: 5px;
 }
