--- a/components/courses/courses.module.css
+++ b/components/courses/courses.module.css
@@ -204,7 +204,11 @@
   border-radius: 15px;
   padding: 5px 10px;
 }
-
+.requirment {
+  font-size: 13px;
+  font-weight: bold;
+  color: gray;
+}
 .modal {
   font-size: 12px;
 }
