--- a/components/auth/auth.module.css
+++ b/components/auth/auth.module.css
@@ -7,3 +7,25 @@
 .buttonSec > button {
   margin-right: 5px;
 }
+
+.signInContainer > h1 {
+  font-weight: bold;
+  color: #3c485f;
+}
+.formSingup {
+  margin-top: 50px;
+  width: 45%;
+}
+.formDisplay {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+.error {
+  font-size: 15px;
+  color: #db1414;
+}
+.singUP {
+  font-weight: bold;
+  color: #3c485f;
+}
