--- a/components/exams/exams.module.css
+++ b/components/exams/exams.module.css
@@ -11,9 +11,10 @@
   text-transform: uppercase;
 }
 .testMain > p {
-  margin-bottom: 0 !important;
+  margin-bottom: 1em !important;
   text-align: justify;
   padding: 0 290px;
+  font-weight: bold;
 }
 
 .testMain > p > span {
@@ -34,10 +35,11 @@
 .singleTest > h3 {
   font-weight: bold;
   text-transform: uppercase;
-  width: 20%;
+  flex-basis: 30%;
 }
 .cardTest {
   display: flex;
+  flex-basis: 50%;
   flex-direction: column;
   background-color: #fff;
   padding: 20px 30px;
@@ -54,7 +56,8 @@
 .titleInfo {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
+  column-gap: 5px;
 }
 .titleInfo > p {
   margin-bottom: 0 !important;
@@ -65,6 +68,7 @@
   display: flex;
   align-items: center;
   column-gap: 7px;
+  justify-content: center;
 }
 .testInfo > p {
   margin-bottom: 0 !important;
