--- a/components/lesson/lessons.module.css
+++ b/components/lesson/lessons.module.css
@@ -51,6 +51,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   column-gap: 30px;
   row-gap: 30px;
 }
