--- a/components/Home/home.module.css
+++ b/components/Home/home.module.css
@@ -277,3 +277,127 @@
 .greenText {
   color: green;
 }
+.AlgoVisu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 80px;
+}
+.contentContainerPart6 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 15px;
+}
+.contentContainerPart6 > h2 {
+  font-weight: bold;
+  font-size: 34px;
+  color: #202033;
+}
+@media screen and (max-width: 480px) {
+  .homePart1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .part1Info {
+    margin-left: 0px;
+    margin-top: 10px;
+  }
+  .imgMain {
+    width: 300px;
+    height: 300px;
+  }
+  .part1Info > h1 {
+    font-size: 25px;
+    line-height: 24px;
+  }
+  .part1Info > p {
+    font-size: 10px;
+    line-height: 20px;
+  }
+  .typeWriter {
+    font-size: 20px;
+  }
+  .part2Main {
+    padding: 30px 10px;
+  }
+  .part2Info {
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+  }
+  .part2Info > h1 {
+    font-size: 27px;
+
+    line-height: 26px;
+    margin-bottom: 6px;
+  }
+  .part2Info > h1 > br {
+    margin-bottom: 5px;
+  }
+  .part2Info > p {
+    font-size: 10px;
+  }
+  .cardLink {
+    width: 175px;
+  }
+  .part2ProCard {
+    column-gap: 10px;
+    row-gap: 10px;
+    width: 20%;
+  }
+  .cards {
+    gap: 8px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 8px 12px rgba(2, 30, 84, 0.06);
+    padding: 6px 6px 6px 10px;
+    border: 1px solid #e8e8e8;
+    border-radius: 6px;
+    transition: all;
+  }
+  .part2Main {
+    display: flex;
+    flex-direction: column;
+  }
+  .part4Container {
+    margin: 50px 0;
+  }
+  .cardCourse {
+    height: 120px;
+  }
+  .prodic {
+    width: 320px;
+    height: 250px;
+  }
+  .part5MainSec {
+    flex-direction: column;
+  }
+  .textPart5 {
+    margin-top: 10px;
+    row-gap: 10px;
+  }
+  .textPart5 > h2 {
+    font-size: 20px;
+    margin-top: 10px;
+  }
+  .imgration {
+    width: 300px;
+    height: 250px;
+  }
+  .AlgoVisu {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+  .contentContainerPart6 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .contentContainerPart6 > h2 {
+    font-size: 20px;
+  }
+}
